Add MLP_prediction Left bonus

--- a/Lab2.ipynb
+++ b/Lab2.ipynb
@@ -662,7 +662,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[insert answer in this Markdown cell]"
+    "In MLP the hidden leyer works as feature instead of x for the output layer. Also, the output layer of MLP shares the identical eqution with MlR, saying $\\bW$ works as the weight and $\\bb$ works as the bias. So, in the derivaiton, both  $\\nabla_{\\bb} \\mathcal{L}^{(n)}$ and $\\nabla_{\\bw_j} \\mathcal{L}^{(n)}$ have the same equations as the previous case. \n",
+    "\n",
+    "<font color='red'>others are mainly copy yours </font>\n",
+    "\n",
+    "$\\rightarrow \\nabla_\\bb \\mathcal{L}^{(n)} = \\mathbf{\\delta}^q$\n",
+    "\n",
+    "\n",
+    "$\\nabla_{\\bw_j} \\mathcal{L}^{(n)}$ is also similar, because in $\\log \\bq_j$ we only exchanged $\\bx$ with $\\bh$ which does not depend on $\\bw_j$. Therefore we have $\\frac{\\partial \\log q_j}{\\partial W_{ij}} = \\frac{\\partial \\sum_{i=1}^M W_{ij}h_{i}+b_j}{\\partial W_{ij}} = h_i$ and $\\nabla_{\\bw_j} \\mathcal{L}^{(n)} = \\bh( [j = t^{(n)}](1- \\frac{q_j}{Z}) - [j \\neq t^{(n)}]\\frac{q_j}{Z})$ respectively.\n",
+    "\n",
+    "\n",
+    "$\\delta^q_j = \\frac{\\partial \\mathcal{L}^{(n)}}{\\partial \\log q_j} = \\frac{\\partial\\log p(t = t^{(n)} \\;|\\; \\bx = x^{(n)}, \\bb, \\bW)}{\\partial \\log q_j} = \\frac{\\partial \\log q_{t^{(n)}} - \\log Z^{(n)}}{\\partial \\log q_j} = \\dots = [j = t^{(n)}](1- \\frac{q_j}{Z}) - [j \\neq t^{(n)}]\\frac{q_j}{Z}$\n",
+    "\n",
+    "\n",
+    "$\\delta^h_j = \\frac{\\partial \\mathcal{L}^{(n)}}{\\partial h_j} = \\frac{\\partial\\log p(t = t^{(n)} \\;|\\; \\bx = x^{(n)}, \\bb, \\bW)}{\\partial h_j} = \\frac{\\partial \\log q_{t^{(n)}} - \\log Z^{(n)}}{\\partial h_j} = \\frac{\\partial \\bw_{t^{(n)}}^T\\bh + \\bb_{t^{(n)}} - \\log \\sum_i \\exp\\log \\bq_i}{\\partial h_j} = \\bW_{jt^{(n)}} - \\sum_k\\frac{\\partial \\log \\sum_i \\exp\\log \\bq_i}{\\partial \\log\\bq_k}\\frac{\\partial \\log \\bq_k}{\\partial \\bh_j} = \\bW_{jt^{(n)}} - \\sum_k\\frac{\\exp \\log \\bq_k}{\\sum_i \\exp\\log \\bq_i}\\bW_{jk} = \\bW_{jt^{(n)}} - \\sum_k\\bp_k\\bW_{jk}$\n",
+    "\n",
+    "$\\frac{\\partial \\mathcal{L}^{(n)}}{\\partial \\bv_j} = \\sum_l \\frac{\\partial \\mathcal{L}^{(n)}}{\\partial \\bh_l}\\frac{\\partial \\bh_l}{\\partial \\bv_j} = \\frac{\\partial \\mathcal{L}^{(n)}}{\\partial \\bh_j}\\frac{\\partial \\bh_j}{\\partial \\bv_j} = \\delta^h_j \\frac{\\partial \\sigma(\\bv_j^T\\bx+a_j)}{\\partial \\bv_j} = \\delta^h_j\\sigma(\\bv_j^T\\bx+a_j)(1-\\sigma(\\bv_j^T\\bx+a_j))\\bx = \\delta^h_j\\bh_j(1-\\bh_j)\\bx$\n",
+    "\n",
+    "$\\frac{\\partial \\mathcal{L}^{(n)}}{\\partial a_j} = \\sum_l \\frac{\\partial \\mathcal{L}^{(n)}}{\\partial \\bh_l}\\frac{\\partial \\bh_l}{\\partial a_j} = \\frac{\\partial \\mathcal{L}^{(n)}}{\\partial \\bh_j}\\frac{\\partial \\bh_j}{\\partial a_j} = \\delta^h_j \\frac{\\partial \\sigma(\\bv_j^T\\bx+a_j)}{\\partial a_j} = \\delta^h_j\\sigma(\\bv_j^T\\bx+a_j)(1-\\sigma(\\bv_j^T\\bx+a_j)) = \\delta^h_j\\bh_j(1-\\bh_j)$"
    ]
   },
   {
@@ -680,7 +697,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[insert answer in this Markdown cell]"
+    "MAP aims at maximize the posterior   $p(\\bW,\\bb,\\bV,\\ba \\mid \\bt,\\bx) = p(\\bt,\\bx \\mid \\bW,\\bb,\\bV,\\ba)p(\\bW,\\bb,\\bV,\\ba)/C$. Asuming $\\bW,\\bb,\\bV,\\ba$ are mutal independet, this could be done by maximizing the log-posterior: $\\ln p(\\bW,\\bb,\\bV,\\ba \\mid \\bt,\\bx) = \\ln p(\\bt,\\bx \\mid \\bW,\\bb,\\bV,\\ba)+\\ln p(\\bW)+\\ln p(\\bb)+\\ln p(\\bV)+\\ln p(\\ba)-\\ln C$. By acheiving this, we could first compute the derivation with respect to $\\bW,\\bb,\\bV,\\ba$, respectively. As we already computed the derivation of log-likelihood and derivation of log-Gaussian is easy to handle, we could easily compute the derivation of log-posterior. \n",
+    "Denote $\\ln p(\\bW,\\bb,\\bV,\\ba \\mid \\bt,\\bx)$ as $\\mathcal Q$.\n",
+    "For example with zero mean Gaussian prior: \n",
+    "\n",
+    "$\\frac{\\partial \\mathcal Q}{\\partial \\bW_k} \\propto \\frac{\\partial (\\mathcal L + p(\\bW_k))}{\\partial \\bW_k} = \\frac{\\partial \\mathcal L}{\\partial \\bW_k} + \\frac{-\\bW_k^T\\Sigma_k^{-1}\\bW_k }{\\bW_k } = \\frac{\\partial \\mathcal L}{\\partial \\bW_k} - \\Sigma_k^{-1}\\bW_k $. \n",
+    "\n",
+    "Here, priors run as the regularization term.\n",
+    "And it is easy to get the similar equations for other three derivations. \n",
+    "\n",
+    "After computing the derivation, we could maximize the log-posterior by gradient decsent(ascent actually) or other similar methods."
    ]
   },
   {
@@ -694,12 +720,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 228,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n",
+      "0.1\n",
+      "0.2\n",
+      "0.3\n",
+      "0.4\n",
+      "0.5\n",
+      "0.6\n",
+      "0.7\n",
+      "0.8\n",
+      "0.9\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def MLP_gradient(x,t,W,b,V,a):\n",
+    "    L = shape(W)[0]\n",
+    "    h = []\n",
+    "    for i in range(L):\n",
+    "        h.append(1/(1+math.exp(-((numpy.matrix(numpy.reshape(V[:,i],(1,784)))*numpy.matrix(x).T)[0][0,0] + a[i]))))\n",
+    "    h = numpy.matrix(numpy.reshape(h,(L,1)))\n",
+    "    logq = []\n",
+    "    for j in range(10):\n",
+    "        logq.append((numpy.matrix(numpy.reshape(W[:,j],(1,L)))*h)[0][0,0] + b[j])\n",
+    "    Z = sum(numpy.exp(logq))\n",
+    "    logp = []\n",
+    "    for i in range(10):\n",
+    "        logp.append(logq[i] - math.log(Z))\n",
+    "    deltaq = []\n",
+    "    for j in range(10):\n",
+    "        if( j==t):\n",
+    "            deltaq.append(1-math.exp(logq[j])/Z)\n",
+    "        else:\n",
+    "            deltaq.append(-math.exp(logq[j])/Z)\n",
+    "    deltah = []\n",
+    "    for j in range(L):\n",
+    "        deltah.append(W[j,t]-numpy.matrix(numpy.reshape(numpy.exp(logp),(1,10)))*(numpy.matrix(numpy.reshape(W[j,:],(10,1)))))\n",
+    "    reph = matlib.repmat(h,1,10)\n",
+    "    repdeltaq = matlib.repmat(deltaq,L,1)\n",
+    "    deltaW = numpy.multiply(repdeltaq,reph)\n",
+    "    deltaq = numpy.reshape(deltaq, (10,1))\n",
+    "    deltaa = []\n",
+    "    for i in range(L):\n",
+    "        deltaa.append(deltah[i]*h[j]*(1-h[j]))\n",
+    "    deltaa = numpy.reshape(deltaa, (L,1))\n",
+    "    repdeltaa = matlib.repmat(numpy.reshape(deltaa, (1,L)),784,1)\n",
+    "    x = numpy.reshape(x,(784,1))\n",
+    "    repx = matlib.repmat(x,1,L)\n",
+    "    deltaV = numpy.multiply(repdeltaa,repx)\n",
+    "    return deltaW, deltaq, deltaV, deltaa\n",
+    "\n",
+    "def sgd_iter(x_train1, t_train1, W, b, V, a):\n",
+    "    rate = 1e-3\n",
+    "    N = x_train1.shape[1]\n",
+    "    arr = range(N)\n",
+    "    numpy.random.shuffle(arr)\n",
+    "    for i in arr: \n",
+    "        dW, db, dV, da = MLP_gradient(x_train1[i], t_train1[i], W, b, V, a)\n",
+    "        W = W + rate*dW\n",
+    "        b = b + rate*db\n",
+    "        V = V + rate*dV\n",
+    "        a = a + rate*da\n",
+    "    return W, b, V, a\n",
+    "\n",
+    "I = 2\n",
+    "speedup = 5\n",
+    "L = 50\n",
+    "W = numpy.random.normal(0,1,(L,10))\n",
+    "b = numpy.random.normal(0,1,(10,1))\n",
+    "V = numpy.random.normal(0,1,(784,L))\n",
+    "a = numpy.random.normal(0,1,(L,1))\n",
+    "trainprob = []\n",
+    "validprob = []\n",
+    "for i in range(speedup*I + 1):\n",
+    "    (W,b,V,a) = sgd_iter(x_train,t_train,W,b,V,a)\n",
+    "    if(i % speedup == 0):\n",
+    "        trainprob.append(0)\n",
+    "        validprob.append(0)\n",
+    "        for k in range(len(x_train)):\n",
+    "            x = x_train[k]\n",
+    "            t = t_train[k]\n",
+    "            h = []\n",
+    "            for j in range(L):\n",
+    "                h.append(1/(1+math.exp(-((numpy.matrix(numpy.reshape(V[:,j],(1,784)))*numpy.matrix(x).T)[0][0,0] + a[j]))))\n",
+    "            h = numpy.matrix(numpy.reshape(h,(L,1)))\n",
+    "            logq = []\n",
+    "            for j in range(10):\n",
+    "                logq.append((numpy.matrix(numpy.reshape(W[:,j],(1,L)))*h)[0][0,0] + b[j])\n",
+    "            Z = sum(numpy.exp(logq))\n",
+    "            trainprob[i//speedup] += logq[t] - math.log(Z)\n",
+    "        for k in range(len(x_valid)):\n",
+    "            x = x_valid[k]\n",
+    "            t = t_valid[k]\n",
+    "            h = []\n",
+    "            for j in range(L):\n",
+    "                h.append(1/(1+math.exp(-((numpy.matrix(numpy.reshape(V[:,j],(1,784)))*numpy.matrix(x).T)[0][0,0] + a[j]))))\n",
+    "            h = numpy.matrix(numpy.reshape(h,(L,1)))\n",
+    "            logq = []\n",
+    "            for j in range(10):\n",
+    "                logq.append((numpy.matrix(numpy.reshape(W[:,j],(1,L)))*h)[0][0,0] + b[j])\n",
+    "            Z = sum(numpy.exp(logq))\n",
+    "            validprob[i//speedup] += logq[t] - math.log(Z)\n",
+    "    print((i + 0.)/(speedup*I))\n",
+    "iterations = range(I+2)\n",
+    "del iterations[0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def MLP_predict(W,V,a,b,x,t):\n",
+    "    N,M = x.shape\n",
+    "    l = len(W)\n",
+    "    h = x.dot(V) + matlib.repmat(a.T,N,1)\n",
+    "    y_prob = h.dot(W) + matlib.repmat(b.T,N,1)\n",
+    "    y = y_prob.argmax(1)\n",
+    "    err = 0\n",
+    "    for i in range(len(y)):\n",
+    "        if (y[i] != t[i]):\n",
+    "            err = err+1\n",
+    "    print err,N\n",
+    "    return y,y_prob "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7655 10000\n"
+     ]
+    }
+   ],
+   "source": [
+    "y,yp = MLP_predict(W,V,a,b,x_valid,t_valid)\n"
+   ]
   },
   {
    "cell_type": "markdown",
