--- a/Lab2.ipynb
+++ b/Lab2.ipynb
@@ -46,27 +46,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/lichang/anaconda/envs/py27/lib/python2.7/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
-      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pylab inline\n",
     "import gzip, cPickle, numpy, matplotlib"
@@ -87,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -113,22 +97,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAfwAAAE6CAYAAADz4+C6AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAAPYQAAD2EBqD+naQAAGudJREFUeJzt3X+UlFUZwPG77vKj3QUEDqLYKoiSYBKhoqacQ4ALoqBA\nKhkkP8Ray4T4VVmgrRTmMVhCQBAEoqMoaR3MYxoUPwyBEAhBgTQRVpFdEYyfwrL9ked2n8vO7OzM\nOzPvzPP9/PU859mZ98I7u8953zv3vjnV1dUGAABkt7PSPQAAAJB8NHwAABSg4QMAoAANHwAABWj4\nAAAoQMMHAEABGj4AAArQ8AEAUICGDwCAAjR8AAAUoOEDAKAADR8AAAVo+AAAKJCX7gF8jkf2hVNO\nwO/HeQ6nIM8z5zicOMfZr9ZzzBU+AAAK0PABAFCAhg8AgAI0fAAAFKDhAwCgAA0fAAAFaPgAAChA\nwwcAQAEaPgAACtDwAQBQgIYPAIACNHwAABSg4QMAoEBYnpYHZLQ9e/bYuKysTNSmTp0q8tGjR9v4\n/vvvF7WioqIkjA4AuMIHAEAFGj4AAArkVFdXp3sMxhgTikHE6vTp0zY+ceJEzK9buHChyI8cOSLy\n7du323jatGmi9pOf/MTGM2bMELUvfOELIn/sscdsXFJSEvP4apCTyItrkFHnOZry8nKRf+UrX7Hx\nwYMHY36fpk2biryioiKxgcUnyPOcNec4Wd566y0b9+zZU9Q2b94s8hYtWgR1WM5xwObOnWvj7373\nu6Lm9ogdO3aIWrt27ZI1pFrPMVf4AAAoQMMHAEABGj4AAAqoXZZ36NAhkVdVVdl4y5YtovbKK6+I\n3J2jnTNnTmBjat26tY3HjBkjavPmzbNxkyZNRK1r164i7969e2Bjwv/s3r1b5N26dRP5J598YuOc\nHDmV5p+vBg0a2Hj//v2i9u6779r4wgsvFLXc3NzYB5yBdu3aZWP3/9MYY7p06ZLq4STNunXrbNyj\nR480jgR1sXz5cpH/8Ic/tPFZZ0W+dvb/HqQTV/gAAChAwwcAQAEaPgAACqiZw9+7d6/IO3XqJHJ/\nzjAV/Hkfd57eX1s/YsQIG59zzjmiVlhYKPIA1+6qcvLkSZG78/a9e/cWNXcr3dr4n7XJkyfb+Prr\nrxe1Sy65xMb+90Pcz0A2cudI3377bVHL5Dl8f68T97sKO3fuTPVwECf/XB0/fjxNI4kfV/gAAChA\nwwcAQAE1t/SbN28u8pYtW4o8qFv6xcXFEY/7/PPPi5q7PMuYM5d6IbXGjRsncn8L43itXLlS5O6W\nyv379xc19zOyadOmQI6fKaZPn25j//cokx0+fFjkv/zlL23sPy2R6bjwcLc6N8aYBx98MOLPdu7c\nWeTuUu6CgoJAx5UIrvABAFCAhg8AgAI0fAAAFFAzh+8vc1uwYIHIly5dauNrr71W1AYOHBjxff1l\nVX/84x9FXr9+fRvv27dP1MrKyiIPGEnnL61bvHixyKM9Otqfe3c/I4MHDxa1oqIikbdv397GEyZM\nEDX3cxiSR1enjLu9dTbxH53qcj8LSL9//etfNu7Tp4+oHThwIOLrpkyZInJ/O+2w4AofAAAFaPgA\nACig5pa+76qrrhJ5x44dbezehjfGmPHjx4v8V7/6lY1LS0tFzX+t69xzzxW5uzwHqVFeXm7jr371\nq6LmPgXRGPmUq29961uiNnfuXJG7S3j82qBBg0Sen59v41atWomau/vib3/7W1H70Y9+JHJ/qiDT\nfPDBByJ3z002iXYr+IYbbkjhSFCbJ5980sa17aY5YMAAG3/9619P2piCxBU+AAAK0PABAFCAhg8A\ngAJq5/B9/ja3rqZNm0asuduBGmNM165dRe7OAyP1KisrRf7II4/Y2N9O2d9uuU2bNjYuKSkRNf+7\nGu4T8fyn48Xr6NGjIn/00UdF7n/2Mo27/agxZ/57M5m7ffLWrVsj/py/5TdSK9rvmP80U/9c+d/f\nygRc4QMAoAANHwAABWj4AAAowBx+DEaNGiXy9evX2/iFF14QtW3bton8y1/+cvIGhjOcOnVK5GPH\njhW5u32uv/3ln//8Z5FffPHFNj558mRQQ4zbv//973QPIVBvvvlmxFpQ34NIlwceeMDG/n4D0fb8\nQHL5e23ccsstMb/WfzzupZdeGsSQUoorfAAAFKDhAwCgALf0Y+DfdpszZ46Nly9fLmr+LaJbb73V\nxtddd52o+U9cYwlf4t5//32R+0/Ac73++usib9euXcSf9Z+2iOS6+uqr0z2EM5w4ccLGGzduFDX3\nb4IxxixZsiTi+7jLKRs2bBjQ6BCL1atXi/zvf/97xJ+97bbbRD506NBkDCmluMIHAEABGj4AAArQ\n8AEAUIA5/Dg0a9bMxv5Srt69e4t82rRpNcbGGDN//nyRDxw40MaFhYUJj1Oj733veyKvrq4Wufu9\niWhz9uly+vRpG/tbe/r/lmzmL5+qC3cZnPv/aYwxK1euFLm71PGzzz4Ttd/85jcir6qqsnFBQYGo\nFRcXi9ydm/eXdLZv3z7i2BG8DRs22Piuu+6K+rN9+/a1sf+Y62z4vgVX+AAAKEDDBwBAARo+AAAK\nMIefoC5duojc31p39OjRNn7uuedEbfjw4SJ/5513bDxu3DhRa9SoUULjzGabNm2y8apVq0TN39vA\nX1sbNu68vT/2K6+8MtXDSar8/HyRu//efv36idqXvvSlmN937dq1Nva/95CXJ//kud+V8df++9sy\nu4++9rf+9ef0i4qKbOw+KtcYY1q0aBFx7Eic//2Pa665JubXuttp++c0G3CFDwCAAjR8AAAUyAnJ\nUp9QDCIZjh8/bmN/K9eePXuK3D0X3/jGN0Qt2ladSRT0Xr9JOc/uLVz3tqsxxrRq1Urk27dvt3G6\nlj66T/Rzt1k1Rk7l+NMPixYtEnmAT1oL8jzHfY4XLlxo47/97W9BjMXceeedIndv2RpjTJs2bQI5\nzksvvSTym2++2cb+U9Xcz2AKheIcp8LPfvYzkU+ZMiXm17pLOjNw6qXWc8wVPgAACtDwAQBQgIYP\nAIACLMtLMnc7xm7duolabm6uyN253T/84Q+itmPHDhvXZYmSdv52mOmYt3fPqzHGzJo1y8bjx48X\ntdatW9v4gQceELUA5+xDyd32tLYtUMPmxRdfjFjzl98iWOXl5SJfunRpzK8dNmyYyDNw3r5OuMIH\nAEABGj4AAArQ8AEAUIA5/IC56ziNMeb555+3sbte3Jgz53ZdV111lcjD+CjXTDBkyJCUH9OfU3zk\nkUdEPnPmTBv7c4j+IzmR+QYMGJDuIWQ1f8vpysrKiD/bq1cvkc+YMSMpYworrvABAFCAhg8AgALc\n0o9DRUWFjR9//HFRe+qpp0S+d+/emN/XXabnLs8y5swnp+H/3C2J/a2iFyxYIHJ/282gPP300za+\n7777RO2TTz4R+Q9+8AMbT506NSnjAbTYv3+/yN0nTvomTJgg8mxf6urjCh8AAAVo+AAAKEDDBwBA\nAebwa3D48GGRL1u2TOQ///nPbbxz5864j9O9e3eRu49xvOKKK+J+X23c7zf433Xwv0PhnrsRI0aI\nWqNGjUS+bds2Gz/xxBOitnr1apG/9957Nm7btq2oDRo0SOTuHD6yk/tdkt27d4vaRRddlOrhZJ2x\nY8fa+PTp0zG/rmPHjskYTsbgCh8AAAVo+AAAKEDDBwBAAbVz+EeOHBH5nj17bDx48GBR27RpU9zH\nKS4utvFDDz0kav72uay1D15VVZXI3Tn8efPmiVqzZs1EvnXr1piPc+ONN9q4d+/eovb9738/5vdB\ndnB/l+syx4yaRXsErr/uvkGDBiKfNGmSjQsKCpIwuszBFT4AAArQ8AEAUCCrb+kfO3bMxqNGjRK1\nNWvWiPztt9+O6xh9+vQR+cSJE0XeqVMnG9erVy+uYyC6yy67zMY9e/YUtb/85S8RX+cv2fNvG7rO\nOecckZeUlIg8WVv2IvOtWLFC5D169EjTSDKXv1Q62u+qvy25v52uZlzhAwCgAA0fAAAFaPgAACiQ\n8XP47pamv/jFL0TNnb/1t7esi/z8fJGXlpba+N577xU1bY9bDIPGjRvb2F2uY4wxixYtEnldtrV9\n+OGHbTxy5EhRa968eV2GCGX8xzQDYcAVPgAACtDwAQBQIONv6f/+97+3sb9zWjSdO3cW+Te/+U0b\n5+XJ/5Z77rlH5A0bNqzLEJFChYWFIvenXPwcCMLAgQNFPnv27DSNJDudf/75Ir/pppts7D/NFJFx\nhQ8AgAI0fAAAFKDhAwCgQE5Ilo+EYhA4Q9CP7+M8h1OQ55lzHE6c4+xX6znmCh8AAAVo+AAAKEDD\nBwBAARo+AAAK0PABAFCAhg8AgAI0fAAAFKDhAwCgAA0fAAAFaPgAACgQlq11AQBAEnGFDwCAAjR8\nAAAUoOEDAKAADR8AAAVo+AAAKEDDBwBAARo+AAAK0PABAFCAhg8AgAI0fAAAFKDhAwCgAA0fAAAF\naPgAAChAwwcAQAEaPgAACtDwAQBQgIYPAIACNHwAABSg4QMAoAANHwAABWj4AAAoQMMHAEABGj4A\nAArQ8AEAUICGDwCAAjR8AAAUoOEDAKAADR8AAAVo+AAAKEDDBwBAARo+AAAK0PABAFCAhg8AgAI0\nfAAAFKDhAwCgAA0fAAAFaPgAAChAwwcAQAEaPgAACtDwAQBQgIYPAIACNHwAABSg4QMAoAANHwAA\nBWj4AAAoQMMHAEABGj4AAArQ8AEAUICGDwCAAjR8AAAUoOEDAKAADR8AAAVo+AAAKEDDBwBAARo+\nAAAK0PABAFCAhg8AgAI0fAAAFKDhAwCgAA0fAAAFaPgAAChAwwcAQAEaPgAACtDwAQBQgIYPAIAC\nNHwAABSg4QMAoEBeugfwuep0DwA1ygn4/TjP4RTkeeYchxPnOPvVeo65wgcAQAEaPgAACtDwAQBQ\ngIYPAIACNHwAABSg4QMAoAANHwAABWj4AAAoQMMHAEABGj4AAArQ8AEAUICGDwCAAjR8AAAUCMvT\n8gAg5UpLS208ceJEUevSpYvIX3nlFRs3adIkuQMDkoArfAAAFKDhAwCgQE51dXW6x2CMMaEYBM6Q\nE/D7Ze15PnHihI1PnjwpamvWrBF5eXm5je+66y5Ry8tLyyxbkOc51Of44MGDIr/kkktsfODAAVHL\nyZH/LZs2bbLx5ZdfnoTRJZWac1xZWSnyU6dO2Xj9+vWidsstt4j8rLOCuQYeNmyYjZ944glRy83N\nDeQYNaj1HHOFDwCAAjR8AAAUoOEDAKAAy/KAGPhzv4899pjIV6xYYeN169bF/L7ufL4xZy4NQ7Dy\n8/NF3q9fPxsvWLAgxaNBvPbt22fjRYsWidqcOXNEfvr0aRu///77oubP2fvf24iX+1lq2rSpqD38\n8MMib9CgQSDHjAVX+AAAKEDDBwBAARo+AAAKsA4/Du+9956N/Xm/l19+WeQbNmyI+D6/+93vRF5U\nVGTjV199VdSGDh1q49atW8c20MSpWodfUVEh8rKyshpjY4w5duyYyN3fozZt2oha8+bNRb5x40Yb\nt2zZUtQ2b95s4xYtWsQy7CCoWaPtc+dTJ02aJGqsw48o7efY/Xu4ePHiuN/H739BzeFHs2PHDpG3\nbds2qLdmHT4AAKDhAwCgAsvyYvDaa6+J/Pbbb7fxRx99JGr+LaIBAwbYeM+ePaI2ePDgiMf038e9\n3fz444/XMmJEcvz4cRv7y2NmzZol8kOHDsX8vu4t3pUrV4qau7WnMfI2vv/5cY+Zwlv6arjn3xh5\nmx6Zo2/fvjau7ZZ+q1atbDx27FhRc5fsGRN9a93Vq1eL/IUXXqh1nGHDFT4AAArQ8AEAUICGDwCA\nAszhf86dy3GX3RljzE033STyw4cP2/jWW28VNX9e2H38ZlVVlagNHz5c5M8880zE8X3ta1+LWEPs\n3O9jTJkyJe736dChg8hXrVpl48aNG4vaxx9/HPdxECz/0cXbt2+P+bWvv/66jS+44AJRa9KkSWID\nQ53079/fxv5jjX3uvHxhYWHcx/zOd74j8vbt29vY37LX5f+dv/DCC+MeQ6K4wgcAQAEaPgAACnBL\n/3N//etfbdyrV6+oP3vHHXfYeP78+aIW7clHa9asEXm0W/j+bnruLSzEry5PRGvXrp2Nu3fvLmqT\nJ08WuX8b37V79+6Yj4nkatSokchHjx5t45KSkqivdev+7onu8lskn3ubPtrvXpDeeOMNkVdWVsb0\nOn/6Jy8vfW2XK3wAABSg4QMAoAANHwAABdTO4U+fPl3k7lye/8SkiRMninzChAk2jjZn7xs1alTM\nP7tkyRKR5+fnx/xaRDZz5kwbX3vttaLWu3dvkbtb4BYUFMR9zP3798f9WiTXPffcY+Pa5vChi/+d\nK/+JmUePHo3pfcaNGxfYmBLFFT4AAArQ8AEAUICGDwCAAmrm8GfPni1yd87eGDkXP2jQIFH78Y9/\nLPJ69epFPI7/KNQtW7bYeNeuXaLmPwLX/V7BlVdeGfEYiJ+7Dvvee+9NyTFXrFiRkuMgMXV5VCqy\ng7sltjHGjBkzxsbbtm0Ttc8++yzm9+3atauNw/Q5Cs9IAABA0tDwAQBQIKtv6R8/ftzGpaWlouYv\nvXNv4/vb5UbjP6nJ3XbXGLllr89/+tLIkSNjPi5Sa+nSpSL/9NNPRe5Oz/ifrY0bN0Z8X/9JjBdd\ndFG8Q0SC/Fuv/nlEeBw8eNDGzz77rKi99NJLMb/PsmXLRF6Xc3722WfbeNGiRaJ2/fXX2zjaFHCq\ncYUPAIACNHwAABSg4QMAoEBWz+FXVVXZ+KOPPor6s1OnTrXxkSNHRM2fv3W3vV27dq2o+XO77pyQ\nPz909913i7x+/fpRx4hgnTx5UuQffPCByN0tlRcvXhz1vdwlXbUtwykqKrLxU089JWphWsIDhMWH\nH34o8m7dutn4nXfeSfFo/qdv37427tOnT1rGUFf8dQEAQAEaPgAACtDwAQBQIKvn8HNzc2187rnn\nitq+fftE3qxZMxvXZS3mBRdcIHJ3baYxxuzZs8fG7uNWjTGmc+fOMR8H8XG/x2GMMXv37rWxOw9o\njDxXxshHErvz7sYYc+ONN4r86aeftvHhw4ejjsndfvlPf/qTqN155502dj+/AP7P3ffC36K8LhLZ\nTtlde3///feLWqdOneIeUzJxhQ8AgAI0fAAAFMjqW/oNGza08Zo1a0TtmmuuEXlFRYWNO3ToIGpD\nhgwR+be//W0bFxQURP1Z9zZxSUlJLMNGAvxb+Js3bxb51VdfHfG1M2fOFHmPHj1s3LZtW1E7duyY\nyP/5z3/aeN26dVHH6E4nDRs2TNTcrXX9seblZfWva9rV5fbuq6++KvIBAwYkZUz4n/POO0/kGzZs\nsPFzzz0nasXFxSKPd7nzvHnzRD5p0qS43idMuMIHAEABGj4AAArQ8AEAUCAnkSUNAQrFIOKxa9cu\nkbdr107k7jyg/xjHgQMHJm9gwQj6+aBJOc/uvH1ZWZmojR8/PuLr3CVwxhgzZ84ckbvfATl69Kio\n3XzzzSJfuXKljRs0aCBqjz76qMjd7xX4W+u6br/9dpG7W/0aY0xhYWHE137xi1+MWKtBkOc5Y3+X\n/WWQdVmeW15eLnJ/CW4IcI7ryH28ujHRf9/+8Y9/iDxNy/JqPcdc4QMAoAANHwAABWj4AAAowMLe\nBPnzPP7aXXce0N+OFfHx10tPmzbNxhMmTBC1Ro0aiXzBggU27tWrl6i5c/bGGLN7924bjxw5UtRW\nrVol8ssvv9zGzzzzjKhdeumlIj9x4oSN77vvPlGbP3++jRcuXChq/ndAXO76fWOM2blzZ8SfRc1+\n+tOfinzy5Mkxv3bu3LlR3wuZ54033kj3EALHFT4AAArQ8AEAUIBb+glyb+UiNV588UWRu7fx/aUz\ny5YtE/kVV1xh4x07doja7NmzRb548WIb+1vpzpgxQ+TuEr/GjRtHHLsxctlex44dRc2dnvCXbfq3\njV1Tp06NekzUzj8XSC13ee3WrVtF7bLLLhN5vXr1kjIGd8vk2267LSnHSCeu8AEAUICGDwCAAjR8\nAAAUYGvdBPlzTf6Wiu6yvE8//VTU8vPzkzewYIRya11/21j3cbP+0jp3zt4YYw4dOmTjN998M+Zj\nzpo1S+QjRowQebRHqWYAtl2tgf/9nO3bt0f8WX+p6Mcff2zjZs2aBTuw+ITuHPvbkj/44IM2XrJk\niagdOHBA5LV9TyYS/7s469evF7n7mGP3b0VN3L/f/vv4S3FThK11AQAADR8AABVo+AAAKMA6/AS9\n++676R6COq1btxa5O4fvb3X82muvRXyfwYMHi/yGG24QubsV8tlnny1qGT5njxh06dJF5G+99VbE\nn+XzUHdDhw4V+bp16yL+rL/PRLxz+P6+HO5jrY2J/khkd37fGGPGjBlj4zTN2dcZn1IAABSg4QMA\noADL8hL04YcfirxVq1Yid2/1/ec//xE1luXFx33anDHGrF271sb+LfzzzjtP5HfccYeN/SV8ubm5\nQQwvE4VuyVYYbNmyReT+Ek+X/3e0oqLCxizLq9l1110n8mi39JPFP2/nn3++jYcMGSJqDz30kMjz\n8kI3I86yPAAAQMMHAEAFGj4AAAowhx8wfztOdymPv5VkmzZtUjKmBIRyDh+BC938bhj4W6sWFxfb\neOPGjaLGHH7d7d27V+TTp0+38a9//esgDmGMMaZDhw429pfzuefUGGNGjhxpY//7PxmAOXwAAEDD\nBwBABW7pB2z58uUi79Wrl4379+8vajNmzBB5y5Ytkzew+HBLX4fQ3e5F4EJ/jk+dOmXjl19+WdTu\nvvtukVdWVtp4+PDhotavXz+Rd+vWzcaFhYWJDjPMuKUPAABo+AAAqEDDBwBAAebwA+Zv+zps2DAb\nP/vss6LmLgExxpiysjIb169fPwmjqzPm8HUI/fwuEsY5zn7M4QMAABo+AAAq0PABAFCAOfwkc+f0\np0yZImqlpaUiLy8vt3FI1uQzh68D87vZj3Oc/ZjDBwAANHwAAFTglj6i4Za+DtzuzX6c4+zHLX0A\nAEDDBwBABRo+AAAKhGUOHwAAJBFX+AAAKEDDBwBAARo+AAAK0PABAFCAhg8AgAI0fAAAFKDhAwCg\nAA0fAAAFaPgAAChAwwcAQAEaPgAACtDwAQBQgIYPAIACNHwAABSg4QMAoAANHwAABWj4AAAoQMMH\nAEABGj4AAArQ8AEAUICGDwCAAjR8AAAUoOEDAKAADR8AAAVo+AAAKEDDBwBAARo+AAAK0PABAFCA\nhg8AgAL/BV+JYGjxpmH4AAAAAElFTkSuQmCC\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x10a8385d0>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def plot_digits(data, numcols, shape=(28,28)):\n",
     "    numdigits = data.shape[0]\n",
@@ -278,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -720,30 +693,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0\n",
-      "0.1\n",
-      "0.2\n",
-      "0.3\n",
-      "0.4\n",
-      "0.5\n",
-      "0.6\n",
-      "0.7\n",
-      "0.8\n",
-      "0.9\n",
-      "1.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "def sigmoid(x):\n",
+    "    return 1.0/(1.0 + np.exp(-x))\n",
+    "import pdb    \n",
+    "\n",
+    "'''\n",
     "def MLP_gradient(x,t,W,b,V,a):\n",
     "    L = shape(W)[0]\n",
     "    h = []\n",
@@ -779,6 +739,41 @@
     "    repx = matlib.repmat(x,1,L)\n",
     "    deltaV = numpy.multiply(repdeltaa,repx)\n",
     "    return deltaW, deltaq, deltaV, deltaa\n",
+    "'''\n",
+    "def MLP_gradient(x,t,w,b,v,a): # w L*10 b 10*1 v 784*L a L*1\n",
+    "    L = len(w)\n",
+    "    N,M = w.shape\n",
+    "\n",
+    "    deltaq = np.zeros((M,1))\n",
+    "    deltah = np.zeros((L,1))\n",
+    "    \n",
+    "    x = np.matrix(x).T\n",
+    "    h = sigmoid(v.T.dot(x) + a)\n",
+    "    logq = (w.T.dot(h) + b)\n",
+    "    q = np.exp(logq)\n",
+    "    Z = q.sum()\n",
+    "    p = q/Z\n",
+    "    \n",
+    "    #Z = np.sum(numpy.exp(logq))\n",
+    "    #logp = logq - np.log(Z)\n",
+    "    logZ = logq.max() + np.log(np.sum(numpy.exp(logq-logq.max())))\n",
+    "    logp = logq - logZ\n",
+    "\n",
+    "    for j in range(10):\n",
+    "        if( j == t):\n",
+    "            deltaq[j] = 1-np.exp(logq[j])/Z\n",
+    "        else:\n",
+    "            deltaq[j] = -np.exp(logq[j])/Z\n",
+    "    \n",
+    "    dW = numpy.multiply(deltaq.T,h)\n",
+    "    \n",
+    "    \n",
+    "    pw = w.dot(p)\n",
+    "    deltah = w[:,t] - pw\n",
+    "    e = np.multiply(h,1-h)\n",
+    "    deltaa = np.multiply(e,deltah)   \n",
+    "    dV = np.multiply(e.T,x)\n",
+    "    return dW, deltaq, dV, deltaa\n",
     "\n",
     "def sgd_iter(x_train1, t_train1, W, b, V, a):\n",
     "    rate = 1e-3\n",
@@ -793,52 +788,42 @@
     "        a = a + rate*da\n",
     "    return W, b, V, a\n",
     "\n",
+    "def MLP_predict(W,V,a,b,x,t):\n",
+    "    N,M = x.shape\n",
+    "    l = len(W)\n",
+    "    h = sigmoid(x.dot(V) + matlib.repmat(a.T,N,1))\n",
+    "    y_prob = h.dot(W) + matlib.repmat(b.T,N,1)\n",
+    "    y = y_prob.argmax(1)\n",
+    "    err = 0.0\n",
+    "    for i in range(len(y)):\n",
+    "        if (y[i] != t[i]):\n",
+    "            err += 1\n",
+    "    erate = err/N\n",
+    "    print erate\n",
+    "    return y,erate\n",
+    "\n",
+    "(x_train, t_train), (x_valid, t_valid), (x_test, t_test) = load_mnist()\n",
     "I = 2\n",
-    "speedup = 5\n",
+    "speedup = 20\n",
     "L = 50\n",
-    "W = numpy.random.normal(0,1,(L,10))\n",
+    "W = np.matrix(numpy.random.normal(0,1,(L,10)))\n",
     "b = numpy.random.normal(0,1,(10,1))\n",
     "V = numpy.random.normal(0,1,(784,L))\n",
     "a = numpy.random.normal(0,1,(L,1))\n",
     "trainprob = []\n",
     "validprob = []\n",
+    "logp = np.zeros(11)\n",
+    "\n",
     "for i in range(speedup*I + 1):\n",
     "    (W,b,V,a) = sgd_iter(x_train,t_train,W,b,V,a)\n",
-    "    if(i % speedup == 0):\n",
-    "        trainprob.append(0)\n",
-    "        validprob.append(0)\n",
-    "        for k in range(len(x_train)):\n",
-    "            x = x_train[k]\n",
-    "            t = t_train[k]\n",
-    "            h = []\n",
-    "            for j in range(L):\n",
-    "                h.append(1/(1+math.exp(-((numpy.matrix(numpy.reshape(V[:,j],(1,784)))*numpy.matrix(x).T)[0][0,0] + a[j]))))\n",
-    "            h = numpy.matrix(numpy.reshape(h,(L,1)))\n",
-    "            logq = []\n",
-    "            for j in range(10):\n",
-    "                logq.append((numpy.matrix(numpy.reshape(W[:,j],(1,L)))*h)[0][0,0] + b[j])\n",
-    "            Z = sum(numpy.exp(logq))\n",
-    "            trainprob[i//speedup] += logq[t] - math.log(Z)\n",
-    "        for k in range(len(x_valid)):\n",
-    "            x = x_valid[k]\n",
-    "            t = t_valid[k]\n",
-    "            h = []\n",
-    "            for j in range(L):\n",
-    "                h.append(1/(1+math.exp(-((numpy.matrix(numpy.reshape(V[:,j],(1,784)))*numpy.matrix(x).T)[0][0,0] + a[j]))))\n",
-    "            h = numpy.matrix(numpy.reshape(h,(L,1)))\n",
-    "            logq = []\n",
-    "            for j in range(10):\n",
-    "                logq.append((numpy.matrix(numpy.reshape(W[:,j],(1,L)))*h)[0][0,0] + b[j])\n",
-    "            Z = sum(numpy.exp(logq))\n",
-    "            validprob[i//speedup] += logq[t] - math.log(Z)\n",
-    "    print((i + 0.)/(speedup*I))\n",
-    "iterations = range(I+2)\n",
-    "del iterations[0]\n"
+    "    \n",
+    "    #compute the prob\n",
+    "     "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -847,32 +832,28 @@
     "def MLP_predict(W,V,a,b,x,t):\n",
     "    N,M = x.shape\n",
     "    l = len(W)\n",
-    "    h = x.dot(V) + matlib.repmat(a.T,N,1)\n",
+    "    h = sigmoid(x.dot(V) + matlib.repmat(a.T,N,1))\n",
+    "    #pdb.set_trace()\n",
     "    y_prob = h.dot(W) + matlib.repmat(b.T,N,1)\n",
     "    y = y_prob.argmax(1)\n",
-    "    err = 0\n",
+    "    err = 0.0\n",
     "    for i in range(len(y)):\n",
     "        if (y[i] != t[i]):\n",
-    "            err = err+1\n",
-    "    print err,N\n",
-    "    return y,y_prob "
+    "            err += 1\n",
+    "    erate = err/N\n",
+    "    print erate\n",
+    "    return y,erate\n",
+    "\n",
+    "MLP_predict(W,V,a,b,x_valid,t_valid)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7655 10000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "y,yp = MLP_predict(W,V,a,b,x_valid,t_valid)\n"
    ]
@@ -892,6 +873,19 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import pdb\n",
+    "pdb.trace()\n",
+    "a =3 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
